Add hot reloads

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+notify = "8.0.0"
 pixels = "0.15.0"
 quikpix = { git = "https://github.com/mathew-horner/quikpix" }
 winit = "0.29.0"
